--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,24 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_add"
+        android:orderInCategory="100"
+        android:title="@string/add2"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_delete"
+        android:orderInCategory="100"
+        android:title="@string/delete2"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_email"
+        android:orderInCategory="100"
+        android:title="@string/email1"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_sms"
+        android:orderInCategory="100"
+        android:title="@string/send_text1"
+        app:showAsAction="never" />
 </menu>
